--- a/airline-android/app/src/main/res/values/strings.xml
+++ b/airline-android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Airline-Android</string>
-    <string name="buttonName">This is a very long string for a button name</string>
+    <string name="launchCalculator">This is a very long string for a button name</string>
     <string name="helloText">Hello Again Java Teacher!</string>
 </resources>
